{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 2,
  "lineage": "85570c65-d8b5-f931-43bb-703122e3bec0",
  "resources": [
    {
      "module": "module.spot-elb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:security-group/sg-08fa0c1ad33d46f3c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-08fa0c1ad33d46f3c",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spot-elb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:vpc/vpc-038ca6ba4cc59dcf1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e27a20daa6baf4ae",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-043755924df433901",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038ca6ba4cc59dcf1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1209280b767185e",
            "owner_id": "057454686230",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.spot-elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "servers-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057454686230:security-group/sg-00b382e69e32badfb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00b382e69e32badfb",
            "ingress": [],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "057454686230",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038ca6ba4cc59dcf1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spot-elb.data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}